# BasicsOfProgrammingCourse

./: CMakeLists.txt  lab_16.c  lab_19.c  lab_19.h  lab_20.c  labs_tests.h  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/data_structures/: CMakeLists.txt
libs/data_structures/array/: array.c  array.h
libs/data_structures/file/: file.c  file.h
libs/data_structures/matrix/: matrix.c  matrix.h  test_matrix.c  test_matrix.h
libs/data_structures/polynomial/: polynomial.c  polynomial.h
libs/data_structures/storehouse/: storehouse.c  storehouse.h
libs/data_structures/string/: string_.c  string_.h  test_string.c  test_string.h
libs/data_structures/tree/: tree.c  tree.h
libs/data_structures/vector/: test_vector.c  test_vector.h  vector.c  vector.h
libs/data_structures/vector_void/: test_vector_void.c  test_vector_void.h  vector_void.c  vector_void.h
